# Portal

./: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  HandleMenus.cpp  HandleMenus.h  HandlingValidationCheck.cpp  HandlingValidationCheck.h  ModifyPortalUsers.cpp  ModifyPortalUsers.h  NavigationMenus.cpp  PortalUsers.cpp  PortalUsers.h  README.md  UtililtyHandler.cpp  UtililtyHandler.h  main.cpp
MainWindow/: CMakeLists.txt  MainWindow.ui  main.cpp
Managing system/: DatabaseManager.cpp  DatabaseManager.h  HandlingValidationCheck.cpp  HandlingValidationCheck.h  NavigationMenus.cpp  NavigationMenus.h  PortalUsers.cpp  PortalUsers.h  admin_table_file.txt  course_table_file.txt  main.cpp  portal.cpp  students_entry_details_file.txt  teachers_table_file.txt  temp_file_two.txt  temporarily_table2.0.txt  temporarly_table.txt  users_File.txt
Managing system/Managing system/: DatabaseManager.cpp  HandlingValidationCheck.cpp  portal.cpp
